	  - renamed 'ipv4_t' structure to 'rgxg_ipv4_t'
	  - renamed 'ipv6_t' structure to 'rgxg_ipv6_t'
	* configure.ac:
	  - call 'AM_PROG_AR' if available
	  - updated 'AC_CHECK_HEADERS'
	  - added checks for 'size_t', 'uint8_t' and 'uint16_t'
	* lib/net.c, src/cidr.c, man/rgxg.1:
	  - adjusted error handling in 'rgxg_net_cidr_string' function
	  - changed some wording

2013-04-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/types.h, lib/net.c, lib/number.c,
	  lib/utils.c, src/main.c:
	  - by default add terminating null byte to regex string
	  - added 'RGXG_NONULLBYTE' option
	* include/rgxg/number.h, lib/number.c: refactored code
	  - removed run-time checks from static functions
	  - use 'size_t' for 'min_length' function parameter
	  - code cleanup and optimizations
	* include/rgxg/utils.h, lib/utils.c, src/escape.c:
	  - added 'options' parameter to 'rgxg_utils_escape_string' function
	* include/rgxg/utils.h, lib/common_macros.h, lib/net.c,
	  lib/number.c, lib/utils.c:
	  - cleaned up code

2013-04-10	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/utils.h, lib/utils.c:
	  - use 'size_t' instead of 'int' for function parameters

2013-04-09	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* man/rgxg.1:
	  - fixed typo
	  - removed LICENSE section

2013-04-07	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* lib/number.c: declared 'limits' variable static
	* lib/internal_utils.c, lib/internal_utils.h, lib/net.c,
	  lib/number.c:
	  - changed prefix of internal function to 'internal_'
	* Makefile.am:
	  - added '-no-undefined' to librgxg_la_LDFLAGS
	  - only export symbols that start with 'rgxg_'

2013-04-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/number.h, +lib/internal_utils.c, +lib/internal_utils.h,
	  lib/net.c, lib/number.c, Makefile.am:
	  - removed 'rgxg_number' function from library
	  - renamed 'rgxg_number' function to 'rgxg_number_single'
	  - minor code cleanup
	* lib/number.c: