@@ -23,6 +23,7 @@ AC_PROG_CC_C99
 AC_PROG_INSTALL
 AM_PROG_CC_C_O
 m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
+AC_PROG_LN_S
 AC_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG
 
